# colab_invest

./: README.md  Update_stocks.ipynb  portfolio_balance.ipynb
cloud/: README.md  general.tf  main.tf  portal_chat_functions.tf  portal_chat_functions_auth.tf  portal_storage.tf  portal_yahoo_functions.tf  portal_yahoo_functions_auth.tf  providers.tf  storage.tf  variables.tf
cloud/functions/: README.md  build.sh
cloud/functions/ask_chat/: main.py  pyproject.toml  requirements.txt
cloud/functions/ask_finance_assistent_chat/: main.py  pyproject.toml  requirements.txt
cloud/functions/ask_nvr_support_chat/: main.py  pyproject.toml  requirements.txt
cloud/functions/ask_sales_chat/: main.py  pyproject.toml
cloud/functions/bb/: Dockerfile  main.py  pyproject.toml  requirements.txt
cloud/functions/chat_history/: main.py
cloud/functions/colab_utils/: README.md  __init__.py  ai_utils.py  firebase_utils.py  gcp_utils.py  general_utils.py  pyproject.toml  requirements.txt
cloud/functions/get_metric/: main.py  pyproject.toml  requirements.txt
cloud/functions/history/: main.py  pyproject.toml  requirements.txt
cloud/functions/send_to_telegram_bot/: main.py  pyproject.toml  requirements.txt
cloud/functions/telegram_bot_handler/: example.json  example_reply.json  main.py  pyproject.toml
cloud/functions/ticket_details/: financial_metric.py  func_bb_finviz_apple.json  func_bb_fmp_apple.json  func_bb_yahoo_apple.json  func_yahoo_apple.json  main.py  pyproject.toml  requirements.txt  stock_details.py  stock_details_apple.json  stock_details_compositor.py  yahoo_data.py  yahoo_func_apple.json
cloud/functions/tickets/: collection_current.json  collection_default.json  collection_eu.json  collection_nyse.json  main.py  pyproject.toml
cloud/functions/yahoo/: example.json  main.py  pyproject.toml  requirements.txt
portal_ux/: .gitignore  README.md  firebase.json  pubspec.yaml
portal_ux/lib/: deployment_info.dart  firebase_options.dart  main.dart
portal_ux/lib/data/: app_constants.dart  app_styles.dart  errors_instructions.dart  preference_names.dart  state_notifiers.dart
portal_ux/lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
portal_ux/lib/utils/: device_utils.dart  (+3 more)
portal_ux/web/: index.html  manifest.json
(+73 files in other folders)
