[tool.poetry]
name = "colab-utils"
version = "0.0.16"
description = "Utils for Solvia project"
authors = ["Andrey Kuznetsov <andrey_kuznetsov@epam.com>"]
packages = [
    { include = "*.py" },
]

[[tool.poetry.source]]
name = "gcp"
url = "https://europe-southwest1-python.pkg.dev/colab-invest-helper/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"
flask_cors = "^5.0.1"
google-cloud-storage = "^2.1.0"
google-auth = "^2.28.1"
google-cloud-secret-manager = "^2.23.3"
firebase-admin = "^6.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
